# coppeliasim_plugin_velodyne_ros2

./: CMakeLists.txt  QUICK_START.md  README.md  ROS2_MIGRATION.md  VELODYNE_ROS2_LUA_README.md  demo.ttt  package.xml  velodyne_main_ros2.lua  velodyne_ros2_lua.lua  velodyne_sensor_script.lua
examples/: README.md  alternative_approach.lua  sample_configuration.lua  troubleshooting.md
include/coppeliasim_plugin_velodyne/: ros_server_velodyne.h  velodyneROSModel.h
lua_scripts/: README.md  velodyne_ros2_lua.lua  velodyne_sensor_script.lua
src/: ros_server_velodyne.cpp  v_repExtVelodyneROS.cpp  velodyneROSModel.cpp  velodyneROSModelCont.cpp
