<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coppeliasim_plugin_velodyne</name>
  <version>0.0.1</version>
  <description>Coppeliasim/V-REP plugin Velodyne for ROS2</description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>TODO</license>
  <url>TODO</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


